--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="Description"
+        content="Hi there! I am a 21 years old M. Sc. Computer Science student from Germany at TU Munich.
+        My main interests are learning on graphs and statistical learning for sequential data.
+        Check out my website to find out more!">
   <title>Hannes Stärk</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,6 +14,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
