--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,14 @@
         My main interests are learning on graphs and statistical learning for sequential data.
         Check out my website to find out more!">
   <title>Hannes Stärk</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "url": "https://hannes-stark.com",
+      "logo": "https://hannes-stark.com/assets/L2.png"
+    }
+    </script>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/L2.png">
