fix breaks on firefox

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8">
   <meta name="Description"
         content="Hi there! I am a 21 years old M. Sc. Computer Science student from Germany at TU Munich.
-        My main interests are learning on graphs and statistical learning for sequential data.
-        Check out my website to find out more!">
+        Check out my projects and feel free to reach out!">
   <title>Hannes Stärk</title>
   <script type="application/ld+json">
     {
