add open graph preview

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,14 @@
   </script>
   <meta charset="utf-8">
   <meta name="Description"
-        content="Hi! I am a M. Sc. Computer Science student at TU Munich working on Graph ML.
+        content="Hi! I am an M. Sc. Computer Science student at TU Munich working on Graph ML.
         Feel free to reach out!">
   <title>Hannes Stärk</title>
+  <meta property="og:title" content="Hannes Stärk"/>
+  <meta property="og:url" content="https://hannes-stark.com/">
+  <meta property="og:description" content="M.Sc. CS student at TU Munich working on Graph ML and SSL.">
+  <meta property="og:image" content="assets/Allianz vor Hecke webformat.jpg">
+  <meta property="og:type" content="website"/>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
