--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <meta name="Description"
         content="Hi! I am an MIT research intern working on Graph/Geometric ML and SSL. I did my M.Sc. Computer Science at TU Munich. Feel free to reach out!">
   <title>Hannes Stärk</title>
-  <meta property="og:title" content="Hannes Stärk: research on GraphML and SSL"/>
+  <meta property="og:title" content="Hannes Stärk: research on Graph and Geometric ML"/>
   <meta property="og:url" content="https://hannes-stark.com/"/>
   <meta property="og:description" content="Hi! I am an MIT research intern working on Graph/Geometric ML and SSL. I did my M.Sc. Computer Science at TU Munich. Feel free to reach out!"/>
   <meta property="og:image" content="https://hannes-stark.com/assets/Allianz_vor_hecke_OpenGraph_compressed.jpg"/>
