--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <title>Hannes Stärk</title>
   <meta property="og:title" content="Hannes Stärk: research on Graph and Geometric ML"/>
   <meta property="og:url" content="https://hannes-stark.com/"/>
-  <meta property="og:description" content="Hi! I am an MIT research intern working on Graph/Geometric ML and SSL. I did my M.Sc. Computer Science at TU Munich. Feel free to reach out!"/>
+  <meta property="og:description" content="Hi! I am an MIT PhD student working on Graph/Geometric machine learning and applications to molecules + proteins. Feel free to reach out!"/>
   <meta property="og:image" content="https://hannes-stark.com/assets/Allianz_vor_hecke_OpenGraph_compressed.jpg"/>
   <meta property="og:type" content="website"/>
   <meta name="twitter:card" content="summary_large_image">
