--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   </script>
   <meta charset="utf-8">
   <meta name="Description"
-        content="Hi! I am an MIT research intern working on Graph/Geometric ML and SSL. I did my M.Sc. Computer Science at TU Munich. Feel free to reach out!">
+        content="Hi! I am an MIT PhD student working on Graph/Geometric machine learning and applications to molecules + proteins. Feel free to reach out!">
   <title>Hannes Stärk</title>
   <meta property="og:title" content="Hannes Stärk: research on Graph and Geometric ML"/>
   <meta property="og:url" content="https://hannes-stark.com/"/>
